--- a/demo/customer/talk.css
+++ b/demo/customer/talk.css
@@ -1,22 +1,54 @@
 .float-button {
-  position: fixed;
-  height: 90px;
-  width: 40px;
-  bottom: 90px;
-  right: 50px;
-  background: #b4d145;
+  position:fixed;
+  bottom:90px;
+  right:50px;
+  width:80px;
+  height:80px;
+  border: none;
+  background:rgba(255,255,255, 0.6);
+  border-radius:10%;
+  box-shadow: 1px 1px 8px 6px rgb(0 0 0 / 50%);
 }
+
+.float-button:active {
+  background:rgba(255,255,255, 0.8);
+  padding-top: 3px;
+  padding-left: 6px;
+  box-shadow: 4px 4px 8px 6px rgb(0 0 0 / 50%);
+}
+
 .float-talk {
-  position: fixed;
-  height: 70%;
-  width: 50%;
-  bottom: 190px;
-  right: 50px;
-  background: #b4d145;
+  position:fixed;
+  height:70%;
+  width:40%;
+  bottom:190px;
+  right:50px;
+  background:#b4d145;
+  border:none;
+  box-shadow:0 0 10px 10px rgb(0 0 0 / 50%);
+  z-index: 9999;
 }
-#btn{
-  width: 80px;
-  height: 80px;
-  border-radius: 10%;
-  box-shadow: 11px 7px 10px 1px rgb(0 0 0 / 50%);
+
+
+@media (max-width: 700px) {
+  .float-button {
+    bottom:40px;
+  }
+
+  .float-talk {
+    bottom:150px;
+    width: 70%;
+    height: 50%;
+  }
+}
+
+@media (max-height: 700px) {
+  .float-button {
+    bottom: 40px;
+  }
+
+  .float-talk {
+    height:60%;
+    bottom: 140px;
+  }
 }
